# rustlette

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILATION_STATUS.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FINAL_FIXES_NEEDED.md  FINAL_SUMMARY.md  GITHUB_PYPI_SETUP.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  OPEN_SOURCE_SETUP_COMPLETE.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUCCESS.md  REMAINING_FIXES.md  SECURITY.md  SENIOR_DEV_ANALYSIS.md  SETUP_COMPLETE.md  START_HERE.md  VICTORY_LAP.md  YOU_ARE_HERE.md  check_setup.py  new_plan.md  pyproject.toml  quickstart.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  greetings.yml  labeler.yml  publish.yml  release.yml  stale.yml  star-tracker.yml
benchmarks/: benchmark.py  fastapi_app.py  flask_app.py  rustlette_app.py  simple_benchmark.py  starlette_app.py
examples/: advanced_app.py  basic_app.py
python/rustlette/: __init__.py
rustlette/: __init__.py  _exception_handler.py  _utils.py  applications.py  authentication.py  background.py  convertors.py  datastructures.py  endpoints.py  exceptions.py  formparsers.py  middleware.py  requests.py  responses.py  routing.py  status.py  testclient.py  types.py  websockets.py
rustlette/middleware/: __init__.py  authentication.py  base.py  cors.py  errors.py  exceptions.py  gzip.py  httpsredirect.py  sessions.py  trustedhost.py  wsgi.py
src/: app.rs  asgi.rs  background.rs  error.rs  lib.rs  middleware.rs  request.rs  response.rs  routing.rs  server.rs  types.rs
tests/: conftest.py  test_applications.py  test_authentication.py  test_background.py  test_concurrency.py  test_convertors.py  test_datastructures.py  test_endpoints.py  test_exceptions.py  test_fastapi_integration.py  test_middleware.py  test_requests.py  test_responses.py  test_routing.py  test_status.py  test_testclient.py  test_websockets.py
