[package]
name = "rustlette"
version = "0.1.0"
edition = "2021"
description = "High-performance Python web framework with Rust internals"
authors = ["Rustlette Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustlette/rustlette"

[lib]
name = "rustlette"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.0"
http = "0.2"
url = "2.4"
urlencoding = "2.1"
regex = "1.10"
once_cell = "1.19"
num_cpus = "1.16"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dashmap = "5.5"
smallvec = "1.11"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
