[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustlette"
version = "0.50.0"
description = "Drop-in Starlette replacement with Rust acceleration — swap one import, keep your entire FastAPI/Starlette app unchanged."
authors = [
    {name = "Rustlette Contributors"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = ["web", "framework", "async", "rust", "performance", "starlette", "fastapi", "asgi"]
dependencies = [
    "anyio>=3.6.2,<5",
    "typing-extensions>=4.10.0; python_version < '3.13'",
]

[project.optional-dependencies]
full = [
    "httpx>=0.27.0,<0.29.0",
    "itsdangerous",
    "python-multipart>=0.0.18",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "coverage[toml]>=7.0",
    "anyio[trio]>=3.6.2",
]
dev = [
    "rustlette[test]",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "maturin>=1.0,<2.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/dhruvbhavsar0612/rustlette"
Documentation = "https://github.com/dhruvbhavsar0612/rustlette#readme"
Repository = "https://github.com/dhruvbhavsar0612/rustlette"
Changelog = "https://github.com/dhruvbhavsar0612/rustlette/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dhruvbhavsar0612/rustlette/issues"

[tool.maturin]
module-name = "rustlette._rustlette_core"
features = ["pyo3/extension-module"]
python-source = "."

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "RUF012", # mutable class variable (used intentionally in Starlette compat)
    "UP007",  # Use X | Y for union types (keep 3.10 compat explicit)
]

[tool.ruff.lint.isort]
known-first-party = ["rustlette"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["rustlette"]
omit = [
    "rustlette/_rustlette_core*",
    "rustlette/middleware/wsgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
show_missing = true
